--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "client": "npm start --prefix client",
-    "dev:start": "concurrently \"npm run server\" \"npm run client\""
+    "dev:start": "concurrently \"npm run server\" \"npm run client\"",
+    "import:data": "node server/seeder.js",
+    "destroy:data": "node server/seeder.js -d"
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,10 @@
   },
   "homepage": "https://github.com/itzzmeakhi/eshop#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
