--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV = development
 PORT = 5000
 MONGODB_URI = mongodb+srv://eshopAdmin:Uk9eZLixbBnuKHze@itzzmeakhi.jezihye.mongodb.net/eshop
+JWT_SECRET = abcd123@789
 
